--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "javascript",
     "backend"
   ],
-  "author": "AbrossIT",
+  "author": "jinish K.",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^3.1.4",
