--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
   "scripts": {
     "start": "node src/index.js",
     "start:pm2": "pm2 start src/index.js --name talknotes-be",
-    "dev": "nodemon -r dotenv/config src/index.js"
+    "dev": "nodemon -r dotenv/config src/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test:gemini": "node src/tests/gemini.test.js",
+    "test:speech": "node src/tests/speech-to-text.test.js",
+    "test:audio": "node src/tests/audio-processor.test.js"
   },
   "keywords": [
     "javascript",
@@ -17,21 +21,25 @@
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^3.1.4",
-    "pm2": "^5.4.2"
+    "pm2": "^6.0.8"
   },
   "dependencies": {
+    "@google-cloud/speech": "^6.7.1",
+    "@google/generative-ai": "^0.21.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "genai": "^0.0.18",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
     "morgan": "^1.10.0",
-    "otp-generator": "^4.0.1",
-    "uuidv4": "^6.2.13",
+    "nodemailer": "^6.9.9",
     "openai": "^4.28.0",
-    "nodemailer": "^6.9.9"
+    "otp-generator": "^4.0.1",
+    "speech": "^0.2.1",
+    "uuidv4": "^6.2.13"
   }
 }
