--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "@google/generative-ai": "^0.21.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
+    "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-fileupload": "^1.5.1",
     "genai": "^0.0.18",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
