--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
     "morgan": "^1.10.0",
+    "multer": "^2.0.1",
     "nodemailer": "^6.9.9",
     "openai": "^4.28.0",
     "otp-generator": "^4.0.1",
