--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@google-cloud/speech": "^6.7.1",
+    "@google-cloud/storage": "^7.16.0",
     "@google/genai": "^1.8.0",
     "@google/generative-ai": "^0.21.0",
     "bcryptjs": "^2.4.3",
