--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -12,13 +12,10 @@ dependencies:
     sdk: flutter
 
   # State Management
-  flutter_bloc: ^8.1.3
-  bloc: ^8.1.2
-  equatable: ^2.0.5
+  provider: ^6.1.1
 
   # Dependency Injection
   get_it: ^7.6.0
-  injectable: ^2.3.2
 
   # Network & API Integration
   dio: ^5.3.2
